--- a/reports.html
+++ b/reports.html
@@ -36,6 +36,14 @@
     <div class="app-content" id="main">
       <nav class="breadcrumbs">Home / Reports</nav>
 
+      <div class="ts-filters">
+        <div class="row" aria-label="Report filters">
+          <span class="title">Period</span>
+          <span class="chip">This Month</span>
+          <a class="btn small ghost" href="#tab-project">Reset</a>
+        </div>
+      </div>
+
       <nav class="tabs mt-6">
         <a href="#tab-project" aria-current="page">By Project <span class="badge ongoing">6</span></a>
         <a href="#tab-dept">By Department</a>
