Timesheets: enhanced By User with leaderboard cards and compact admin table

--- a/admin.html
+++ b/admin.html
@@ -31,6 +31,7 @@
       </div>
       <div class="flex items-center gap-2">
         <a class="btn" href="new-project.html" data-tooltip="Start a static wizard">New Project</a>
+        <a class="btn" href="timesheets.html#tab-my" data-tooltip="Go to My Timesheet">Fill Timesheet</a>
         <a class="btn" href="assets/csv/projects.csv" download data-tooltip="Downloads projects.csv">Export CSV</a>
         <a class="btn ghost" href="index.html#tour">Help</a>
       </div>
