--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,7 @@
       </div>
       <div class="flex items-center gap-2">
         <a class="btn" href="new-project.html">New Project</a>
+        <a class="btn" href="timesheets.html#tab-my">Fill Timesheet</a>
         <a class="btn" href="assets/csv/projects.csv" download>Export CSV</a>
       </div>
     </header>
