Timesheets: improve spacing rhythm (sticky filters padding, larger gaps, page-level spacing); set body.timesheets-page

--- a/timesheets.html
+++ b/timesheets.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="assets/img/favicon.svg">
 <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body>
+<body class="timesheets-page">
 <a class="skip-link" href="#main">Skip to content</a>
 <div class="app">
   <aside class="sidebar" aria-label="Primary">
